
MovieJukebox 1.9 BETA
---------------------
  - Fixed defect  #981 Use poster.scanner.SearchPriority regardless of mjb.internet.plugin (other than IMDb)
  - Fixed defect #1013 Support for localised IMDB, e.g. (ES, FR, DE, etc)
  - Fixed defect #1155 YAMJ refuses to pickup fanart and poster for a movie
  - Enhancement  #1239 Plugin for www.comingsoon.it
  - Fixed defect #1283 IMDB update for non-MPAA Certification
  - Fixed defect #1284 Comma divider missing when not all fields present in default skins
  - Fixed defect #1287 Bad extraction of TVDb id from NFO
  - Enhancement  #1282 Add movie poster FilmAffinity
  - Fixed defect #1289 Release Date or Premiered date is not being loaded from NFO file
  - Fixed defect #1290 FilmAffinity plot no longer retrieved from website
  - Fixed defect #1293 FilmAffinity title is wrong for Spanish users
  - Enhancement  #1296 Force rescan of XML data if UNKNOWN exists, or XML is stale
  - Enhancement  #1298 List all indexes a movie appears in, in the XML
  - Fixed defect #1299 Parental controls broken
  - Enhancement  #1300 Modify play from index code to also play Disk Images
  - Fixed defect #1301 OFDB title isn't set anymore
  - Fixed defect #1302 Some plots are not retrieved from FilmAffinity even if the movie exist + Poster from www.caratulasdecine.com is not retrieved even if it exist
  - Fixed defect #1303 "String index out of range: -1" error when trying to retrieve a poster from www.caratulasdecine.com in some films
  - Fixed defect #1304 Year isn't fetched by the IMDB plugin
  - Fixed defect #1306 Movie poster found on www.caratulasdecine.com (and retrieved),but generation sends "not found on www.caratulasdecine.com"
  - Fixed defect #1309 XML file overwrites the lastPart of a multipart TV Show or Movie
  - Fixed defect #1310 imdb.es not picking up genres
  - Fixed defect #1311 YAMJ doesn't use MediaInfo's information in vob and mp4 files and some mkv