@@ -432,6 +432,10 @@ imdb.perfect.match=true
 # Specifies the IMDb site to use 
 # Valid values are : us, fr, es, de, it, pt
 imdb.site=us
+
+# Get all available information from the "combined" imdb page rather than the more limited "standard" page 
+imdb.full.info=false
+
 ################################################################
 ## TheTVDB plugin parameters
 #
